# pyprojroot

./: .gitignore  Makefile  README.md  environment-dev.yml  pyproject.toml  pyprojroot.py  setup-dev.sh  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: python-build-test.yml  python-package-conda.ignore-yml  python-package-conda.yml
pyprojroot/: __init__.py  criterion.py  here.py  pyprojroot.py
src/pyprojroot/: __init__.py  criterion.py  here.py  pyprojroot.py  root.py
tests/: test_here.py  test_pyprojroot.py  test_root.py
