[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyprojroot"
version = "0.3.0"
authors = [
  { name="Daniel Chen", email="chendaniely@gmail.com" },
]
description = "Project-oriented workflow in Python"
readme = "README.md"
dependencies = [
  "typing-extensions"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black~=19.3b0",
    "mypy~=0.720",
    "flake8~=3.8.4",
    "twine~=4.0.2",
    "build~=0.10.0",
]
test = [
    "pytest>=6.2.5",
]

[project.urls]
"Homepage" = "https://github.com/chendaniely/pyprojroot"
"Bug Tracker" = "https://github.com/chendaniely/pyprojroot/issues"